# tylerjw.dev

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  pixi.toml
.github/workflows/: deploy.yaml  interop-example.yaml
content/: _index.md  contact.md  talks.md
content/posts/: 20240918_cppcon_lightingtalk.md  20240920_cppcon_cpp_rust_interop.md  20241013_lawful_cant_be_good.md  20241014_fearless_git.md  20241106_building_trustworthy_software.md  20250908_rustconf.md  20251003_rust_cpp_interop_2025_update.md  20251012_rust_logging_in_tests.md  roscon23_parameters.md  rust_cmake_interop_cmake.md  rust_cmake_interop_part_3_cxx.md  rust_cpp_interop.md  rust_cpp_part4_buildrs.md
content/posts/battlesnake/: index.md  logic.rs
content/posts/conda-packaging/: index.md
content/posts/roscon23_parameters/: index.md  parameters_talk.py
content/posts/rust_cpp_interop/: index.md
content/posts/xml_launch/: easy-launch.py  index.md
content/roscon23_parameters/: index.md  parameters_talk.py
content/slides/: my_layouts.py  parameters_talk.py
error-example/: Cargo.toml  README.md
error-example/crates/sextant-anyhow/: Cargo.toml  README.md
error-example/crates/sextant-anyhow/output/: redis-chart.json
error-example/crates/sextant-anyhow/src/: analyzer.rs  chart.rs  lib.rs  main.rs  report.rs  template.rs
error-example/crates/sextant-anyhow/test-data/nginx-chart/: values-prod.yaml
error-example/crates/sextant-anyhow/test-data/nginx-chart/templates/: serviceaccount.yaml
error-example/crates/sextant-anyhow/test-data/redis-chart/templates/: deployment.yaml  secret.yaml  service.yaml
error-example/crates/sextant-anyhow/tests/: integration.rs
error-example/crates/sextant-color-eyre/: Cargo.toml  README.md
error-example/crates/sextant-color-eyre/examples/: backtrace_demo.rs  error_demo.rs
error-example/crates/sextant-color-eyre/output/: nginx-chart.json
error-example/crates/sextant-color-eyre/src/: analyzer.rs  chart.rs  lib.rs  main.rs  report.rs  template.rs
error-example/crates/sextant-color-eyre/test-data/nginx-chart/: values.yaml
error-example/crates/sextant-color-eyre/test-data/redis-chart/: Chart.yaml  values.yaml
error-example/crates/sextant-color-eyre/tests/: integration.rs
error-example/crates/sextant-snafu/: Cargo.toml  README.md
error-example/crates/sextant-snafu/output/: nginx-chart.json  summary.md
error-example/crates/sextant-snafu/src/: analyzer.rs  chart.rs  lib.rs  main.rs  report.rs  template.rs
error-example/crates/sextant-snafu/test-data/nginx-chart/templates/: service.yaml
error-example/crates/sextant-snafu/tests/: integration.rs
error-example/crates/sextant-thiserror/: Cargo.toml  README.md
error-example/crates/sextant-thiserror/output/: redis-chart.json  summary.md
error-example/crates/sextant-thiserror/src/: analyzer.rs  chart.rs  lib.rs  main.rs  report.rs  template.rs
error-example/crates/sextant-thiserror/test-data/nginx-chart/: Chart.yaml
error-example/crates/sextant-thiserror/test-data/nginx-chart/templates/: configmap.yaml  deployment.yaml
error-example/crates/sextant-thiserror/test-data/redis-chart/templates/: configmap.yaml
error-example/crates/sextant-thiserror/tests/: integration.rs
rust-cpp-interop-example/: .gitignore  Cargo.toml  Makefile  README.md
rust-cpp-interop-example/crates/robot_joint/: Cargo.toml
rust-cpp-interop-example/crates/robot_joint-cpp/: CMakeLists.txt  Cargo.toml
rust-cpp-interop-example/crates/robot_joint-cpp/.cache/clangd/index/: lib.cpp.C4A32812D65CBD5B.idx  robot_joint.hpp.5B2B9ED2ECEB5E73.idx  tests.cpp.29F3C79DC07F6F4C.idx
rust-cpp-interop-example/crates/robot_joint-cpp/include/: robot_joint.hpp
rust-cpp-interop-example/crates/robot_joint-cpp/src/: lib.cpp  lib.rs
rust-cpp-interop-example/crates/robot_joint-cpp/tests/: CMakeLists.txt  tests.cpp
rust-cpp-interop-example/crates/robot_joint-cxx/: CMakeLists.txt  Cargo.toml  build.rs
rust-cpp-interop-example/crates/robot_joint-cxx/.cache/clangd/index/: robot_joint.hpp.A2B12A298F83B4B3.idx  tests.cpp.CFBCBDAFB25380D7.idx
rust-cpp-interop-example/crates/robot_joint-cxx/include/robot_joint/: robot_joint.hpp
rust-cpp-interop-example/crates/robot_joint-cxx/src/: lib.rs
rust-cpp-interop-example/crates/robot_joint-cxx/tests/: CMakeLists.txt  tests.cpp
rust-cpp-interop-example/crates/robot_joint/src/: joint.rs  lib.rs
rust-cpp-interop-example/examples/: cxx_example.cpp  manual_ffi_example.cpp
slides/: 20250112_rust_meetup_testing.md  20251101_cpp_rust_interop_bettercode.md  my_layouts.py  roscon23_parameters.py  rust_cpp_interop.py  watch.sh  xml_launch.py
slides/images/: parameters_link_qr.svg.import  paul.jpeg.import  xml_launch_link_qr.svg.import  xml_launch_rviz.png.import
static/images/: kart.jpg.import  picknik_logo.png.import  profile.jpg.import
templates/: base.html  page.html
