[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
description = "Example project demonstrating Rust/C++ interop patterns"
authors = ["Tyler Weaver <tyler@tylerjw.dev>"]
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["rust", "cpp", "interop", "robotics", "ffi"]
categories = ["api-bindings", "external-ffi-bindings"]
repository = "https://github.com/tylerjw/tylerjw.dev"
