[package]
name = "robot_joint"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Rust robotics joint library demonstrating interop patterns"
keywords = ["robotics", "joint", "transform", "nalgebra"]
categories = ["science::robotics"]

[dependencies]
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"

[features]
default = []
serde = ["dep:serde", "nalgebra/serde-serialize"]
